change mood to a drink checkbox

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,10 +12,10 @@
         <item>Cold</item>
         <item>Rainy</item>
     </string-array>
-    <string-array name="moodArray">
+    <string-array name="drinkArray">
         <item>Any</item>
-        <item>Happy</item>
-        <item>Suck</item>
+        <item>YES</item>
+        <item>NO</item>
     </string-array>
     <string-array name="budgetArray">
         <item>Any</item>
