--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,19 +2,19 @@
     <string name="app_name">Lunch Decider</string>
 
     <string name="title_section1">Search Restaurant</string>
-    <string name="title_section2">Recommend Restaurant</string>
+    <string name="title_section2">Add New Restaurant</string>
     <string name="title_section3">Feedback</string>
 
     <string name="askWeather">Weather Condition</string>
     <string name="askBudget">Budget Condition</string>
     <string name="askDrink">Free Drinks?</string>
-    <string name="askRest">Enter the name of restaurant</string>
+    <string name="askRest">Name of the Restaurant</string>
 
-    <string name="decide">Decide!</string>
-    <string name="add">Add Restaurant!</string>
+    <string name="decide">Search</string>
+    <string name="add">Add</string>
     <string name="lunchIcon">Lunch Icon</string>
     <string name="restaurantName">restaurant name</string>
-    <string name="searchResultOnMap">Check them on the map!</string>
+    <string name="searchResultOnMap">Check them on the map</string>
 
 
     <string-array name="weatherArray">
@@ -30,9 +30,9 @@
     </string-array>
     <string-array name="budgetArray">
         <item>Any</item>
-        <item>less than 110</item>
+        <item>Less than 110</item>
         <item>110 to 160</item>
-        <item>more than 160</item>
+        <item>More than 160</item>
     </string-array>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
